Correct the data on profile page increase the height of the textarea fixed the issue- overflow hidden in details

--- a/src/assets/styles/global-styles.css
+++ b/src/assets/styles/global-styles.css
@@ -87,6 +87,7 @@ ul {
     padding: 10px 20px;
     height: 73%;
     background-color: var(--color-white);
+    overflow-x: hidden;
     overflow-y: scroll;
     border-radius: 0 5px 5px 0;
 }
